--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=Inventory-Management-system
+spring.datasource.url=jdbc:mysql://localhost:3306/e_commerce
+spring.datasource.username=root
+spring.datasource.password=04121
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+server.port=9080
+spring.jpa.hibernate.ddl-auto=update
+spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
+
